--- a/.github/workflows/main_reactform.yml
+++ b/.github/workflows/main_reactform.yml
@@ -26,12 +26,18 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-
+     #Zip the build directory
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.7.1
+        with:
+            filename: release.zip
+            path: ./build/* 
+            
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +59,4 @@ jobs:
           app-name: 'reactform'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5D38546472974F98BD0DA38ACC0E6990 }}
-          package: .
+          package: release.zip
